[gd_scene load_steps=3 format=3 uid="uid://dp37y0kv4hng1"]

[ext_resource type="Script" uid="uid://ciky1bd2maeyw" path="res://addons/polygon2d_tool/slider_spin_box.gd" id="1_s4l38"]
[ext_resource type="Script" uid="uid://dp10a6ixffduw" path="res://addons/polygon2d_tool/reset_button.gd" id="2_byl18"]

[node name="SliderSpinBox" type="HBoxContainer"]
offset_right = 112.0
offset_bottom = 51.0
script = ExtResource("1_s4l38")

[node name="ResetButton" type="Button" parent="." node_paths=PackedStringArray("target_buttons")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "‚ü≤"
script = ExtResource("2_byl18")
target_buttons = [NodePath("../VBoxContainer/SpinBox")]
metadata/_custom_type_script = "uid://dp10a6ixffduw"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[connection signal="value_changed" from="VBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
